# tsp_w_sequence_constraints

./: .gitignore  README.md  pyproject.toml  template_env
doc/: hld.drawio  hld.likec4  report.md
doc/results/i20/: LocalSearchImprover.txt  NaiveSequencer.txt  SimulatedAnnealingImprover.txt  bounds.txt
doc/results/i30/: ALNSWrapper.txt  LocalSearchImprover.txt  NaiveSequencer.txt  SimulatedAnnealingImprover.txt  bounds.txt
doc/results/i40/: ALNSWrapper.txt  LocalSearchImprover.txt  NaiveSequencer.txt  SimulatedAnnealingImprover.txt
doc/results/i50/: ALNSWrapper.txt  LocalSearchImprover.txt  SimulatedAnnealingImprover.txt  bounds.txt
doc/results/i60/: ALNSWrapper.txt  LocalSearchImprover.txt  NaiveSequencer.txt  SimulatedAnnealingImprover.txt  bounds.txt
src/: main.py
src/bounds/: lower_bound.py  upper_bound.py
src/datastore/: distance_manager.py  edge_manager.py  node_manager.py
src/input_processing/: csv_parser.py  data_validation.py
src/optimiser/: greedy.py
src/optimiser/iterative/: alns_wrapper.py  callback.py  iterative.py  local_search.py  sa.py  termination.py
src/optimiser/iterative/operations/: relocate.py  three_opt_swap.py
src/report/: plot_builder.py  route_export.py
src/schemas/: node.py  route.py
src/utils/: logger.py
tests/datasource/: test_distance_manager.py  test_node_manager.py
